-Tidied up minor things
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.0:
-Fixed STEEM interest calculator bug
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.1:
-Added STEEM / STEEM Dollars Poloniex markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.2:
-Added Ethereum Classic Poloniex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.3:
-Added Ethereum Classic Bittrex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.4:
-Added Ethereum Classic Kraken market
-Reduced STEEM Power Interest calculator to 3 month estimate maximum
-Fixed bugs when toggling the cookies settings on / off
-Optimized the configuration file format, to reduce uneeded clutter
-Other minor optimizations
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.5:
-Modularized content sections and libraries
-Used better semantics for naming modules
-Cleaned up code nesting / separation
-Added Ethereum Classic Bitfinex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.6:
-Cleaned up underperforming markets
-Reorganized markets
-Added additional Cryptofresh markets
-Added LBRY (LBC) markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.7:
-Reorganized markets
-------------------------------------------------------------------

























